feat/test : 비지니스 로직 처리기능 / 당첨번호를 처리한다.
LottoServiceTest에 당첨 번호를 처리하는 Test가 추가되었습니다.\n사용자로부터 6개의 숫자를 입력받아 저장합니다.\n보너스 번호도 입력받아 저장합니다.